Bug 329708 - Untranslatable strings in Statusbar
Summary: Untranslatable strings in Statusbar
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.4
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-08 02:32 UTC by André Marcelo Alvarenga
Modified: 2014-01-09 13:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (54.30 KB, image/png)
2014-01-08 02:33 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2014-01-08 02:32:13 UTC
There are 2 strings that is not present in pot file.

"Join a new channel on this server" and "Move this tab"

file: /src/mainwindow.cpp

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2014-01-08 02:33:00 UTC
Created attachment 84504 [details]
Screenshot
Comment 2 Eike Hein 2014-01-08 20:48:17 UTC
Git commit c8bb6dd421723723fa9f28397b3566b943eb342f by Eike Hein.
Committed on 08/01/2014 at 20:47.
Pushed by hein into branch '1.5'.

Make strings translatable.
CCMAIL:kde-i18n-doc@kde.org

M  +2    -2    src/mainwindow.cpp

http://commits.kde.org/konversation/c8bb6dd421723723fa9f28397b3566b943eb342f
Comment 3 André Marcelo Alvarenga 2014-01-08 22:50:09 UTC
Eike.

There are five others incidences of "Move this tab" string in /src/mainwindow.cpp

lines 302, 319, 328, 340 and 349.
Comment 4 Eike Hein 2014-01-09 13:45:30 UTC
Whoops, sorry - fixing.
Comment 5 Eike Hein 2014-01-09 13:45:40 UTC
Git commit b6eb19f0656c7adfee89c3277c317013f92466c9 by Eike Hein.
Committed on 09/01/2014 at 13:44.
Pushed by hein into branch '1.5'.

Fix the missing instances.

M  +5    -5    src/mainwindow.cpp

http://commits.kde.org/konversation/b6eb19f0656c7adfee89c3277c317013f92466c9