Fix the missing instances.

BUG:329708